--- a/Contact_Form/index.html
+++ b/Contact_Form/index.html
@@ -1,8 +1,10 @@
 <html>
 <head>
-  <title>Contact Form</title>  
+<title>Contact Form</title>  
 <meta content='width=device-width, initial-scale=1' name='viewport'>
-<link href='https://fonts.googleapis.com/css?family=Roboto:100,200,300,400italic,400,500,500italic,700,700italic,900%7CMaterial+Icons' rel='stylesheet' type='text/css'/>
+<link href='https://fonts.googleapis.com/css?family=Pacifico:100,200,300,400italic,400,500,500italic,700,700italic,900%7CMaterial+Icons' rel='stylesheet' type='text/css'/>
+ </head>
+  <body>  
 <style>
 body{background-color:black;margin:0;padding:0 30px;color:#fff;font-family:'Roboto',sans-serif;}
 .contact-box{overflow:hidden;}
@@ -26,8 +28,6 @@ h1,h2,h3{text-align:center;}
 #contactForm .gotcha{border:none;background:0 0;}
 @media screen and (max-width:800px){#contactForm .styled-input {width:100%;}}
 </style>
-  </head>
-  <body>
 <script>
 function getQueryVariable(variable) {
   var query = window.location.search.substring(1);
