--- a/Contact_Form/contact-us.html
+++ b/Contact_Form/contact-us.html
@@ -1,12 +1,8 @@
-<html>
-<head>
 <title>Contact Form</title>  
 <meta content='width=device-width, initial-scale=1' name='viewport'>
 <link href='https://fonts.googleapis.com/css?family=Pacifico:100,200,300,400italic,400,500,500italic,700,700italic,900%7CMaterial+Icons' rel='stylesheet' type='text/css'/>
- </head>
-  <body>  
 <style>
-body{background-color:black;margin:0;padding:0 30px;color:#fff;font-family:'Roboto',sans-serif;}
+body{background-color:white;margin:0;padding:0 30px;color:#666;font-family:'Roboto',sans-serif;}
 .contact-box{overflow:hidden;}
 h1,h2,h3{text-align:center;}
 #contactForm input:focus~label,#contactForm input:valid~label,#contactForm textarea:focus~label,#contactForm textarea:valid~label{font-size:.75em;color:#3893e2;top:-2.25rem;-webkit-transition:all 125ms ease;transition:all 125ms ease}
@@ -75,5 +71,3 @@ document.write('<h2>'+Amp Templates+'</h2>\
   <h3>Back to <a href="'+ www.antoncabon.us +'" title="Homepage">Homepage</a></h3>');
   </script>
 </div>
-  </body>
-</html>
