--- a/Contact_Form/contact-us.html
+++ b/Contact_Form/contact-us.html
@@ -2,7 +2,7 @@
 <meta content='width=device-width, initial-scale=1' name='viewport'>
 <link href='https://fonts.googleapis.com/css?family=Pacifico:100,200,300,400italic,400,500,500italic,700,700italic,900%7CMaterial+Icons' rel='stylesheet' type='text/css'/>
 <style>
-body{background-color:#fff;margin:0;padding:0 30px;color:#666;font-family:'Roboto',sans-serif;}
+body{background-color:#fff;margin:0;padding:0 30px;color:#666;font-family:'Pacifico',sans-serif;}
 .contact-box{overflow:hidden;}
 h1,h2,h3{text-align:center;}
 #contactForm input:focus~label,#contactForm input:valid~label,#contactForm textarea:focus~label,#contactForm textarea:valid~label{font-size:.75em;color:#3893e2;top:-2.25rem;-webkit-transition:all 125ms ease;transition:all 125ms ease}
@@ -19,7 +19,7 @@ h1,h2,h3{text-align:center;}
 #contactForm input:focus,#contactForm textarea:focus{outline:0}
 #contactForm input:focus~.span1,#contactForm input:focus~.span2,#contactForm textarea:focus~.span1,#contactForm textarea:focus~.span2{width:50%}
 #contactForm textarea{width:100%;min-height:15em}
-#contactForm .btn{font-family:Helvetica,Arial,sans-serif;text-transform:uppercase;font-size:14px;font-weight:800;letter-spacing:1px;border-radius:0;padding:0 25px;height:51px;line-height:51px;color:#333;background-color:#fafafa;border:1px solid #ddd;cursor:pointer;margin:20px 0 0;background-image:none}
+#contactForm .btn{font-family:Pacifico,Arial,sans-serif;text-transform:uppercase;font-size:14px;font-weight:800;letter-spacing:1px;border-radius:0;padding:0 25px;height:51px;line-height:51px;color:#333;background-color:#fafafa;border:1px solid #ddd;cursor:pointer;margin:20px 0 0;background-image:none}
 #contactForm .btn-default:focus,#contactForm .btn-default:hover{background-color:#3893e2;border:1px solid #666;color:#fff}
 #contactForm .gotcha{border:none;background:0 0;}
 @media screen and (max-width:800px){#contactForm .styled-input {width:100%;}}
